@@ -324,31 +324,42 @@ class SGL_ManagerResolver extends SGL_DecorateProcess
             //  if no manager name return error
             if (empty($managerName)) {
                 SGL::raiseError('could not get class name', SGL_ERROR_INVALIDREQUEST);
+                return $this->getDefaultManager($input);
             }
             //  build path to manager class
             $classPath = $mgrPath . $managerName . '.php';
             if (!@file_exists($classPath)) {
                 SGL::raiseError('no mgr class file with this name exists', SGL_ERROR_NOFILE);
+                return $this->getDefaultManager($input);
             }
             require_once $classPath;
 
             //  if class exists, instantiate it
             if (!@class_exists($managerName)) {
                 SGL::raiseError('no mgr class with this name exists', SGL_ERROR_NOCLASS);
+                return $this->getDefaultManager($input);
             }
             $input->moduleName = $moduleName;
             $input->set('manager', new $managerName);
         } else {
-            
             SGL::raiseError('malformed request', SGL_ERROR_INVALIDREQUEST);
+            return $this->getDefaultManager($input);
         }
         
-        if (is_null($input->get('manager'))) {
-            $mgr = new stdClass();
-            $mgr->module = 'default';
-            $input->set('manager', $mgr);
-        }
-        
+        $this->processRequest->process($input);
+    }
+    
+    function getDefaultManager(&$input)
+    {
+        require_once SGL_MOD_DIR . '/default/classes/DefaultMgr.php';
+        $mgr = new DefaultMgr();
+        $mgr->module = 'default';
+        $input->set('manager', $mgr);
+        $req = $input->getRequest();
+        $req->set('moduleName', 'default');
+        $req->set('managerName', 'default');
+        $input->setRequest($req); // this should take care of itself
+
         $this->processRequest->process($input);
     }
     
