@@ -6,6 +6,7 @@ CHANGELOG
 BUGFIXES
 
 IMPROVEMENTS
+28-09-05    Implemented default manager invocation when url params get garbled
 27-09-05    Added SGL::setNoticeBehaviour() method
 
 +-----------------------+
